@@ -1,5 +1,10 @@
 2005-03-23 Takuro Ashie <ashie@homa.ne.jp>
 
+	* src/canna_jrkanji.cpp: Fixed odd behavior on symbols mode.
+	* po/ja.po: Updated.
+
+2005-03-23 Takuro Ashie <ashie@homa.ne.jp>
+
 	* src/canna_jrkanji.cpp: Removed some nosense modes.
 
 2005-03-22 Takuro Ashie <ashie@homa.ne.jp>
